--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         title="Projects"
         id="projects"
         class="text-decoration-none btn btn-outline-primary"
-        >Projects</a
+        >Repos</a
       >
       <a
         href="no-javascript.html"
